# haverford-plato

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  appcast.xml
core/web-sdk/: Cargo.toml  README.md
core/web-sdk/src/: lib.rs
leanring-buddy/: AXCandidateScoring.swift  AXElementResolver.swift  AppSettings.swift  BYOKSection.swift  BuddyPushToTalkShortcut.swift  CompanionManager.swift  CompanionPanelView.swift  CompanionResponseOverlay.swift  CompanionScreenCaptureUtility.swift  DesignSystem.swift  EntitlementManager.swift  GlobalPushToTalkShortcutMonitor.swift  HighlightGeometry.swift  Info.plist  MenuBarPanelManager.swift  OnboardingTargetFrameReporter.swift  OpenAIRealtimeClient.swift  OverlayWindow.swift  PanelBodyView.swift  PlanStrip.swift  PlatoHighlight.swift  PlatoHighlightView.swift  PointDirectiveParsing.swift  PointingInstrumentation.swift  PomodoroTimer.swift  RealtimeTelemetry.swift  ScreenshotTextRecognizer.swift  SessionStateManager.swift  SettingsView.swift  SkillManager.swift  SkillMetadata.swift  SkillPromptComposer.swift  SkillStore.swift  SkillValidation.swift  SkillyAnalytics.swift  SubscriptionRequiredModal.swift  TrialExhaustedModal.swift  TrialTracker.swift  leanring_buddyApp.swift
leanring-buddy.xcodeproj/: project.pbxproj
leanring-buddyTests/: AXCandidateScoringTests.swift  AXElementResolverGeometryTests.swift  HighlightGeometryTests.swift  PlatoHighlightTests.swift  PointDirectiveParserTests.swift  PointToolArgumentsParsingTests.swift  PointingInstrumentationTests.swift  RealtimeUsageParsingTests.swift  SkillValidationTests.swift  (+2 more)
(+22 files in other folders)
