[workspace]
members = [
    "core/domain",
    "core/policy",
    "core/ffi",
    "core/skills",
    "core/realtime",
    "core/mobile-sdk",
    # apps/* shell crates are added in Slice 4 (Windows/Linux shells)
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
